tests/NormalTests/paczka1/small_fuzzy/21757138.err
Error in line 4: KAZ S435 54,1
Error in line 8: ytWNtE S435 88,6
